<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/quiz_photo"
    android:id="@+id/main_linear"
    tools:context=".questions">
    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/question_num"
        android:textColor="#8FFFFFFF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/selectoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectionoption"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="@color/black">
        </TextView>
        <TextView
            android:id="@+id/correctanswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textAlignment="center"
            android:text="@string/correctanswer"
            >


        </TextView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/f_linear"
        android:layout_width="389dp"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="136dp"
            android:background="#6399D0CD"
            android:fontFamily="@font/almarai_light"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/question1"
            android:textColor="#B4121212"
            android:textSize="18sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/first_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/optionA"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_w"
                android:text="@string/question1_A"
                android:fontFamily="@font/almarai_light"
                android:backgroundTint="#6399D0CD"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:paddingTop="15dp">
            </TextView>
            <TextView
                android:id="@+id/optionB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/btn_w"
                android:layout_marginTop="10dp"
                android:text="@string/question1_B"
                android:fontFamily="@font/almarai_light"
                android:backgroundTint="#6399D0CD"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:paddingTop="15dp">
            </TextView>




        </LinearLayout>


    <LinearLayout
        android:id="@+id/second_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_w"
            android:text="@string/question1_C"
            android:fontFamily="@font/almarai_light"
            android:layout_marginTop="10dp"
            android:backgroundTint="#6399D0CD"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingTop="15dp">
        </TextView>
        <TextView
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_w"
            android:layout_marginTop="10dp"
            android:text="@string/question1_D"
            android:fontFamily="@font/almarai_light"
            android:backgroundTint="#6399D0CD"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:paddingTop="15dp">
        </TextView>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score1"
            android:textStyle="normal"
            android:layout_gravity="end"
            android:textColor="@color/white">

        </TextView>
        <ProgressBar
            android:id="@+id/prograss_bar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false">


        </ProgressBar>


    </LinearLayout>

</LinearLayout>